--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,8 @@
-<h1>Assignment 2</h1>
-<app-cart [items] = "fruitsList" (itemAdded) = "addNewItem($event)"></app-cart>
+<div class="container" style="margin: 20px;">
+  <div class="row">
+    <div class="col-xs-12">
+        <h1>Assignment 2</h1>
+        <app-cart [items] = "fruitsList" (itemAdded) = "addNewItem($event)"></app-cart>
+    </div>
+  </div>
+</div>
