--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -1,9 +1,11 @@
 <h3>Add Fruits to your List</h3>
-<input type="text" [(ngModel)] = "newItem">
-<button (click)= "addItem($event)"
+<input type="text" [(ngModel)] = "newItem"  >
+<button *ngIf="newItem !== '' "(click)= "addItem($event)"
 class="btn"
 [ngClass]="{'btn-primary': newItem !== '', 'btn-default': newItem === ''}">Add Item</button>
 <hr>
 <ul class="list-group" >
-  <li class="list-group-item" *ngFor="let item of items">{{item}}</li>
+  <li class="list-group-item"
+  *ngFor="let item of items; let i=index"
+  [ngStyle]="{backgroundColor: i % 2 === 0 ? 'yellow' : 'blue'}">{{item}}</li>
 </ul>
